--- a/config.json
+++ b/config.json
@@ -14,7 +14,8 @@
   "DEBUG_MODE": true,
   "SECONDS_BEFORE_TRANSACTION": 2,
   "SECONDS_AFTER_TRANSACTION": 2,
+  "MERGE_CLIPS_WITHIN_SECONDS": 0.5,
   "MAX_VIDEOS_PER_UPLOAD": 5,
-  "MAX_FILE_SIZE_MB": 500,
+  "MAX_FILE_SIZE_MB": 2048,
   "ALLOWED_EXTENSIONS": ["mp4", "avi", "mov", "mkv"]
 }
