--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
   "MIN_TRANSACTION_FRAMES": 1,
   "CALIBRATION_SCALE": 1.0,
   "CAMERA_ANGLE": 0,
-  "CASHIER_ZONE": [0, 300, 900, 430],
+  "CASHIER_ZONE": [0, 330, 850, 385],
   "CASHIER_PERSISTENCE_FRAMES": 20,
   "MIN_CASHIER_OVERLAP": 0.7,
   "DRAW_HANDS": true,
@@ -15,6 +15,10 @@
   
   "DETECT_CASH_COLOR": true,
   "CASH_COLOR_THRESHOLD": 150,
+  "CASH_DETECTION_CONFIDENCE": 0.65,
+  "MAX_CASH_TRANSACTION_SECONDS": 5,
+  "DETECT_HAND_VELOCITY": true,
+  "VIOLENCE_VELOCITY_THRESHOLD": 150,
   "CASH_COLORS": {
     "50000_won": {
       "lower": [15, 100, 100],
@@ -44,14 +48,16 @@
   "MAX_FILE_SIZE_MB": 2048,
   "ALLOWED_EXTENSIONS": ["mp4", "avi", "mov", "mkv"],
   
-  "DETECTION_TYPES": {
-    "CASH_EXCHANGE": {
-      "enabled": true,
-      "priority": 3,
-      "label": "현금 거래",
-      "color": [0, 255, 0],
-      "icon": "money-bill-wave"
-    },
+    "FRAME_SKIP": 1,
+    
+    "DETECTION_TYPES": {
+        "CASH_EXCHANGE": {
+            "enabled": true,
+            "priority": 3,
+            "label": "현금 거래",
+            "color": [0, 255, 0],
+            "icon": "money-bill-wave"
+        },
     "VIOLENCE": {
       "enabled": true,
       "priority": 1,
