--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Django Settings
 SECRET_KEY=django-insecure-your-secret-key-here-change-in-production
 DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1,cctv.hio.ai.kr
+ALLOWED_HOSTS=localhost,127.0.0.1,cctv.hio.ai.kr,3.35.206.122
 
 # Database (SQLite by default, can change to PostgreSQL)
 DATABASE_URL=sqlite:///db.sqlite3
