--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Django Settings
 SECRET_KEY=django-insecure-your-secret-key-here-change-in-production
 DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1,cctv.hio.ai.kr,3.35.206.122
+ALLOWED_HOSTS=*
 
 # Database (SQLite by default, can change to PostgreSQL)
 DATABASE_URL=sqlite:///db.sqlite3
@@ -32,6 +32,9 @@ MAX_UPLOAD_SIZE_MB=1024
 # RTSP Settings
 RTSP_TIMEOUT=10
 RTSP_BUFFER_SIZE=10
+
+# FFmpeg Path (leave empty for auto-detect)
+FFMPEG_PATH=/usr/bin/ffmpeg
 
 # Language Settings (ko or en)
 DEFAULT_LANGUAGE=ko
