Add PostgreSQL support with setup guide

--- a/.env
+++ b/.env
@@ -6,8 +6,13 @@ SECRET_KEY=django-insecure-your-secret-key-here-change-in-production
 DEBUG=True
 ALLOWED_HOSTS=*
 
-# Database (SQLite by default, can change to PostgreSQL)
-DATABASE_URL=sqlite:///db.sqlite3
+# Database - PostgreSQL
+DB_ENGINE=postgresql
+DB_NAME=cctv
+DB_USER=orange
+DB_PASSWORD=00oo00oo
+DB_HOST=localhost
+DB_PORT=5432
 
 # Admin Account (for initial setup)
 ADMIN_USERNAME=admin
